samples/_failures_safe/1761303676_149d32_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77cf088a.c: In function ‘main’:
./samples/SAFE/__tmp_77cf088a.c:144: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_77cf088a.c:143:9: error: expected declaration or statement at end of input
  143 |         if
      |         ^~
./samples/SAFE/__tmp_77cf088a.c:143:9: error: expected declaration or statement at end of input
